--- a/src/marslite_navigation/config/teleop_params.yaml
+++ b/src/marslite_navigation/config/teleop_params.yaml
@@ -1,7 +1,9 @@
-force_stop_distance: 0.5              # unit: m
-constant_linear_velocity_limit: 0.7   # unit: m/s
-constant_angular_velocity_limit: 0.3  # unit: m/s 
-constant_linear_velocity_step: 0.01   # unit: m/s
-constant_angular_velocity_step: 0.05  # unit: m/s
-predict_time_interval: 2              # unit: s
-sector_half_range: 90                 # unit: X
+linear_velocity_limit_front:   0.7  # unit: m/s
+linear_velocity_limit_back:   -0.5  # unit: m/s 
+angular_velocity_limit_left:   0.5  # unit: m/s
+angular_velocity_limit_right: -0.5  # unit: m/s
+linear_velocity_step: 0.01          # unit: m/s
+angular_velocity_step: 0.05         # unit: m/s
+time_decel_bound: 5.0               # unit: s
+time_stop_bound:  1.0               # unit: s
+scan_range: 40                      # unit: degree
