--- a/src/marslite_shared_control/package.xml
+++ b/src/marslite_shared_control/package.xml
@@ -13,6 +13,9 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
 
+  <build_depend>geometry_msgs</build_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+
   <build_depend>roscpp</build_depend>
   <exec_depend>roscpp</exec_depend>
 
