--- a/src/marslite_navigation/CMakeLists.txt
+++ b/src/marslite_navigation/CMakeLists.txt
@@ -10,6 +10,7 @@ add_compile_options(-std=c++14)
 # Find catkin packages and libraries for catkin and system dependencies
 ################################################################################
 find_package(catkin REQUIRED COMPONENTS
+  dynamic_reconfigure
   geometry_msgs
   message_filters
   nav_msgs
@@ -31,11 +32,17 @@ find_package(catkin REQUIRED COMPONENTS
 # Declare ROS dynamic reconfigure parameters
 ################################################################################
 
+generate_dynamic_reconfigure_options(
+  cfg/VirtualZone.cfg
+  cfg/AdaptiveController.cfg
+)
+
 ################################################################################
 # Declare catkin specific configuration to be passed to dependent projects
 ################################################################################
 catkin_package(
   CATKIN_DEPENDS
+    dynamic_reconfigure
     geometry_msgs
     message_filters
     roscpp
@@ -57,17 +64,30 @@ include_directories(
 
 # Declare C++ library
 add_library(teleop_interface
-  src/teleop_interface.cpp
+  src/teleoperation/teleop_interface.cpp
 )
+add_dependencies(teleop_interface  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(teleop_interface  ${catkin_LIBRARIES})
+
+add_library(virtual_zone
+  src/shared_control/virtual_zone.cpp
+  src/shared_control/static_virtual_zone.cpp
+  src/shared_control/deformable_virtual_zone.cpp
+)
+add_dependencies(virtual_zone  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(virtual_zone  ${catkin_LIBRARIES})
 
 # Declare C++ executables and
 #  link the library to the executables
 
-add_executable(teleop_keyboard src/teleop_keyboard.cpp)
+add_executable(teleop_keyboard src/teleoperation/teleop_keyboard.cpp)
 target_link_libraries(teleop_keyboard ${catkin_LIBRARIES} teleop_interface)
 
-add_executable(teleop_joystick src/teleop_joystick.cpp)
+add_executable(teleop_joystick src/teleoperation/teleop_joystick.cpp)
 target_link_libraries(teleop_joystick ${catkin_LIBRARIES} teleop_interface)
+
+add_executable(adaptive_controller src/shared_control/adaptive_controller.cpp)
+target_link_libraries(adaptive_controller ${catkin_LIBRARIES} virtual_zone)
 
 
 ################################################################################
@@ -84,12 +104,14 @@ catkin_install_python(PROGRAMS
 install(TARGETS
     teleop_keyboard
     teleop_joystick
+    adaptive_controller
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 # Install C++ libraries
 install(TARGETS
     teleop_interface
+    virtual_zone
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
