--- a/src/marslite_navigation/cfg/AdaptiveController.cfg
+++ b/src/marslite_navigation/cfg/AdaptiveController.cfg
@@ -1,6 +1,6 @@
 #!/usr/bin/env python3
 
-PACKAGE='marslite_shared_control'
+PACKAGE='marslite_navigation'
 
 import sys
 from dynamic_reconfigure.parameter_generator_catkin import *
@@ -10,4 +10,4 @@ gen.add("kx", double_t, 0, "Proportional ratio of x axis of translational veloci
 gen.add("ky", double_t, 0, "Proportional ratio of y axis of translational velocity controller", 5.0, 0.0, 20.0)
 gen.add("kw", double_t, 0, "Proportional ratio of rotational velocity controller", 0.1, 0.0, 20.0)
 
-exit(gen.generate(PACKAGE, "marslite_shared_control", "AdaptiveController"))
+exit(gen.generate(PACKAGE, "marslite_navigation", "AdaptiveController"))
