--- a/src/marslite_navigation/cfg/VirtualZone.cfg
+++ b/src/marslite_navigation/cfg/VirtualZone.cfg
@@ -1,6 +1,6 @@
 #!/usr/bin/env python3
 
-PACKAGE='marslite_shared_control'
+PACKAGE='marslite_navigation'
 
 import sys
 from dynamic_reconfigure.parameter_generator_catkin import *
@@ -9,4 +9,4 @@ gen = ParameterGenerator()
 gen.add("ka", double_t, 0, "Proportional ratio of length of the semimajor axis", 7.8, 0.0, 20.0)
 gen.add("kb", double_t, 0, "Proportional ratio of length of the semiminor axis", 5.1, 0.0, 20.0)
 
-exit(gen.generate(PACKAGE, "marslite_shared_control", "VirtualZone"))
+exit(gen.generate(PACKAGE, "marslite_navigation", "VirtualZone"))
