--- a/src/marslite_navigation/CMakeLists.txt
+++ b/src/marslite_navigation/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 generate_dynamic_reconfigure_options(
   cfg/VirtualZone.cfg
-  cfg/AdaptiveController.cfg
+  cfg/SharedControl.cfg
 )
 
 ################################################################################
@@ -64,39 +64,42 @@ include_directories(
 
 # Declare C++ library
 
-add_library(teleop_interface
+add_library(teleop_interface_lib
   src/teleoperation/teleop_interface.cpp
   src/teleoperation/teleop_joystick.cpp
   src/teleoperation/teleop_keyboard.cpp
 )
-add_dependencies(teleop_interface  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(teleop_interface  ${catkin_LIBRARIES})
+add_dependencies(teleop_interface_lib  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(teleop_interface_lib  ${catkin_LIBRARIES})
 
-add_library(virtual_zone
+add_library(virtual_zone_lib
   src/shared_control/virtual_zone.cpp
   src/shared_control/static_virtual_zone.cpp
   src/shared_control/deformable_virtual_zone.cpp
 )
-add_dependencies(virtual_zone  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(virtual_zone  ${catkin_LIBRARIES})
+add_dependencies(virtual_zone_lib  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(virtual_zone_lib  ${catkin_LIBRARIES})
 
-add_library(adaptive_controller
+add_library(shared_control_lib
   src/shared_control/virtual_zone.cpp
   src/shared_control/static_virtual_zone.cpp
   src/shared_control/deformable_virtual_zone.cpp
-  src/shared_control/adaptive_controller.cpp
+  src/shared_control/shared_control.cpp
 )
-add_dependencies(adaptive_controller  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(adaptive_controller  ${catkin_LIBRARIES})
+add_dependencies(shared_control_lib  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(shared_control_lib  ${catkin_LIBRARIES})
 
 # Declare C++ executables and
 #  link the library to the executables
 
 add_executable(teleop_keyboard src/teleop_keyboard_main.cpp)
-target_link_libraries(teleop_keyboard ${catkin_LIBRARIES} teleop_interface adaptive_controller)
+target_link_libraries(teleop_keyboard ${catkin_LIBRARIES} teleop_interface_lib)
 
 add_executable(teleop_joystick src/teleop_joystick_main.cpp)
-target_link_libraries(teleop_joystick ${catkin_LIBRARIES} teleop_interface adaptive_controller)
+target_link_libraries(teleop_joystick ${catkin_LIBRARIES} teleop_interface_lib)
+
+add_executable(shared_control src/shared_control_main.cpp)
+target_link_libraries(shared_control ${catkin_LIBRARIES} shared_control_lib)
 
 
 ################################################################################
@@ -113,14 +116,15 @@ catkin_install_python(PROGRAMS
 install(TARGETS
     teleop_keyboard
     teleop_joystick
+    shared_control
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 # Install C++ libraries
 install(TARGETS
-    teleop_interface
-    virtual_zone
-    adaptive_controller
+    teleop_interface_lib
+    virtual_zone_lib
+    shared_control_lib
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
