--- a/src/marslite_navigation/cfg/SharedControl.cfg
+++ b/src/marslite_navigation/cfg/SharedControl.cfg
@@ -10,4 +10,4 @@ gen.add("kx", double_t, 0, "Proportional ratio of x axis of translational veloci
 gen.add("ky", double_t, 0, "Proportional ratio of y axis of translational velocity controller", 5.0, 0.0, 20.0)
 gen.add("kw", double_t, 0, "Proportional ratio of rotational velocity controller", 0.1, 0.0, 20.0)
 
-exit(gen.generate(PACKAGE, "marslite_navigation", "AdaptiveController"))
+exit(gen.generate(PACKAGE, "marslite_navigation", "SharedControl"))
