--- a/src/mars_lite_moveit_config/config/mars_arm_controller_tm.yaml
+++ b/src/mars_lite_moveit_config/config/mars_arm_controller_tm.yaml
@@ -3,7 +3,7 @@ arm_controller:
   joints: [tm_shoulder_1_joint, tm_shoulder_2_joint, tm_elbow_joint, tm_wrist_1_joint, tm_wrist_2_joint, tm_wrist_3_joint]
   constraints:
       goal_time: 0.6
-      stopped_velocity_tolerance: 0.05
+      stopped_velocity_tolerance: 0
       tm_shoulder_1_joint: {trajectory: 0.1, goal: 0.1}
       tm_shoulder_2_joint: {trajectory: 0.1, goal: 0.1}
       tm_elbow_joint: {trajectory: 0.1, goal: 0.1}
@@ -13,6 +13,48 @@ arm_controller:
   stop_trajectory_duration: 0.5
   state_publish_rate:  25
   action_monitor_rate: 10
+
+# arm_controller:
+#   type: velocity_controllers/JointTrajectoryController
+
+#   joints: 
+#     - tm_shoulder_1_joint
+#     - tm_shoulder_2_joint
+#     - tm_elbow_joint
+#     - tm_wrist_1_joint
+#     - tm_wrist_2_joint
+#     - tm_wrist_3_joint
+
+#   gains:
+#     tm_shoulder_1_joint:  {p: 10,  d: 1, i: 1, i_clamp: 1}
+#     tm_shoulder_2_joint:  {p: 10,  d: 1, i: 1, i_clamp: 1}
+#     tm_elbow_joint:       {p: 10,  d: 1, i: 1, i_clamp: 1}
+#     tm_wrist_1_joint:     {p: 10,  d: 1, i: 1, i_clamp: 1}
+#     tm_wrist_2_joint:     {p: 10,  d: 1, i: 1, i_clamp: 1}
+#     tm_wrist_3_joint:     {p: 10,  d: 1, i: 1, i_clamp: 1}
+
+#   velocity_ff:
+#     tm_shoulder_1_joint:  1.0
+#     tm_shoulder_2_joint:  1.0
+#     tm_elbow_joint:       1.0
+#     tm_wrist_1_joint:     1.0
+#     tm_wrist_2_joint:     1.0
+#     tm_wrist_3_joint:     1.0
+
+#   constraints:
+#     goal_time: 0.6
+#     stopped_velocity_tolerance: 0.05
+#     tm_shoulder_1_joint: {trajectory: 0.1, goal: 0.1}
+#     tm_shoulder_2_joint: {trajectory: 0.1, goal: 0.1}
+#     tm_elbow_joint: {trajectory: 0.1, goal: 0.1}
+#     tm_wrist_1_joint: {trajectory: 0.1, goal: 0.1}
+#     tm_wrist_2_joint: {trajectory: 0.1, goal: 0.1}
+#     tm_wrist_3_joint: {trajectory: 0.1, goal: 0.1}
+
+#   stop_trajectory_duration: 0.5
+#   state_publish_rate: 25
+#   action_monitor_rate: 20
+
 
 
 joint_group_position_controller:
