--- a/src/marslite_control/package.xml
+++ b/src/marslite_control/package.xml
@@ -24,6 +24,9 @@
   <build_depend>sensor_msgs</build_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
 
+  <build_depend>tf</build_depend>
+  <exec_depend>tf</exec_depend>
+
   <build_depend>trajectory_msgs</build_depend>
   <exec_depend>trajectory_msgs</exec_depend>
 
