--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,55 @@
+absl-py==2.1.0
 actionlib==1.14.0
 angles==1.9.13
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+autobahn==24.4.2
+Automat==24.8.1
+babel==2.17.0
 base_local_planner==1.17.3
+beautifulsoup4==4.13.3
+bleach==6.2.0
 bondpy==1.8.6
 camera-calibration==1.17.0
 camera-calibration-parsers==1.12.0
 catkin==0.8.10
+catkin-pkg==1.0.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
+cloudpickle==3.1.1
+comm==0.2.2
+constantly==23.10.4
 contourpy==1.3.1
 controller-manager==0.20.0
 controller-manager-msgs==0.20.0
+cryptography==44.0.2
 cv-bridge==1.16.2
 cycler==0.12.1
+debugpy==1.8.13
+decorator==5.2.1
 defusedxml==0.7.1
 diagnostic-analysis==1.11.0
 diagnostic-common-diagnostics==1.11.0
 diagnostic-updater==1.11.0
+distro==1.9.0
+dnspython==2.7.0
+docutils==0.21.2
 dynamic-reconfigure==1.7.3
+entrypoints==0.4
+exceptiongroup==1.2.2
+executing==2.2.0
+fastjsonschema==2.21.1
 filelock==3.16.1
 fonttools==4.55.3
+fqdn==1.5.1
 fsspec==2024.12.0
+future==1.0.0
 gazebo_plugins==2.9.2
 gazebo_ros==2.9.2
 gencpp==0.7.0
@@ -28,23 +58,65 @@ genlisp==0.4.18
 genmsg==0.6.0
 gennodejs==2.0.2
 genpy==0.6.15
+h11==0.14.0
+h5py==3.13.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperas==0.4.1
+hyperlink==21.0.0
+hyperopt==0.2.7
 idna==3.10
 image-geometry==1.16.2
+incremental==24.7.2
 interactive-markers==1.12.0
+ipykernel==6.29.5
+ipython==8.34.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.2
 Jinja2==3.1.5
 joint-state-publisher==1.15.1
 joint-state-publisher-gui==1.15.1
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keras==3.9.0
 kiwisolver==1.4.8
 laser_geometry==1.6.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 message-filters==1.17.0
+mistune==3.1.3
+ml_dtypes==0.5.1
 moveit-commander==1.1.16
 moveit-core==1.1.16
 moveit-ros-planning-interface==1.1.16
 moveit-ros-visualization==1.1.16
 mpmath==1.3.0
+namex==0.0.8
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.4.2
+notebook==7.3.3
+notebook_shim==0.2.4
 numpy==2.2.1
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -59,23 +131,46 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
+optree==0.14.1
+overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.1.0
+platformdirs==4.3.7
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
 psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
+py4j==0.10.9.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+Pygments==2.19.1
+pymongo==4.11.3
+pyOpenSSL==25.0.0
 pyparsing==3.2.1
 pyrealsense2==2.55.1.6486
 python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
 python-qt-binding==0.4.4
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.3.0
 qt-dotgraph==0.4.2
 qt-gui==0.4.2
 qt-gui-cpp==0.4.2
 qt-gui-py-common==0.4.2
+referencing==0.36.2
 requests==2.32.3
 resource_retriever==1.12.7
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
 rosapi==0.11.17
 rosbag==1.17.0
 rosboost-cfg==1.15.8
@@ -83,7 +178,11 @@ rosbridge-library==0.11.17
 rosbridge-server==0.11.17
 rosclean==1.15.8
 roscreate==1.15.8
+rosdep==0.25.1
+rosdistro==1.0.1
 rosgraph==1.17.0
+rosinstall==0.7.8
+rosinstall-generator==0.1.23
 roslaunch==1.17.0
 roslib==1.15.8
 roslint==0.12.0
@@ -93,6 +192,7 @@ rosmaster==1.17.0
 rosmsg==1.17.0
 rosnode==1.17.0
 rosparam==1.17.0
+rospkg==1.6.0
 rospy==1.17.0
 rosserial_python==0.9.2
 rosservice==1.17.0
@@ -100,6 +200,7 @@ rostest==1.17.0
 rostopic==1.17.0
 rosunit==1.15.8
 roswtf==1.17.0
+rpds-py==0.23.1
 rqt-console==0.4.12
 rqt-image-view==0.4.17
 rqt-logger-level==0.4.12
@@ -136,30 +237,52 @@ rtabmap-python==0.21.9
 rviz==1.14.25
 scipy==1.15.0
 seaborn==0.13.2
+Send2Trash==1.8.3
 sensor-msgs==1.13.1
+service-identity==24.2.0
 six==1.17.0
 smach==2.5.2
 smach-ros==2.5.2
 smclib==1.8.6
+sniffio==1.3.1
+soupsieve==2.6
 srdfdom==0.6.4
+stack-data==0.6.3
 supervision==0.25.1
 sympy==1.13.1
+terminado==0.18.1
 tf==1.13.2
 tf-conversions==1.13.2
 tf2-geometry-msgs==0.7.7
 tf2-kdl==0.7.7
 tf2-py==0.7.7
 tf2-ros==0.7.7
+tinycss2==1.4.0
+tomli==2.2.1
 topic-tools==1.17.0
 torch==2.5.1
 torchvision==0.20.1
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 triton==3.1.0
 turtlebot3_teleop==1.2.5
+Twisted==24.11.0
+txaio==23.1.1
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
 ultralytics==8.3.58
 ultralytics-thop==2.0.13
 urdfdom-py==0.4.6
+uri-template==1.3.0
 urllib3==2.3.0
+vcstools==0.1.42
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.13
+wstool==0.1.17
 xacro==1.14.18
+zope.interface==7.2
